--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,7 +11,7 @@ body {
 }
 
 header {
-  background: #417090
+  background: #7c334f;
 }
 
 section {
@@ -19,6 +19,9 @@ section {
 }
 
 #banner {
-  background: #7c334f;
-  border: #cd596b;
+  background: #417090;
+}
+
+.fork {
+    display: none;
 }
