--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,7 +16,7 @@ header {
 
 header h1 {
     font-size: 0px;
-    background: transparent url(https://github.com/OpenBookshelf/ProbStat/blob/gh-pages/logo.svg) 0 0 no-repeat;
+    background: transparent url(https://raw.githubusercontent.com/OpenBookshelf/ProbStat/430dd85c1436ad0bae4947190926cf8379c208fe/logo.svg) 0 0 no-repeat;
     background-position: center;
     height: 60px;
 }
