--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,30 @@
   background-color: ghostwhite;
   min-height: 50vh;
 }
+
+.loading {
+  display: flex;
+  justify-content: center;
+}
+
+.loading div {
+  width: 1rem;
+  height: 1rem;
+  margin: 2rem 0.3rem;
+  background: blue;
+  border-radius: 50%;
+  animation: 0.9s bounce infinite alternate;
+}
+.loading div:nth-child(2) {
+  animation-delay: 0.3s;
+}
+
+.loading div:nth-child(3) {
+  animation-delay: 0.6s;
+}
+@keyframes bounce {
+  to {
+    opacity: 0.3;
+    transform: translate3d(0, -1rem, 0);
+  }
+}
