--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,25 @@
     transform: translate3d(0, -1rem, 0);
   }
 }
+
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #5f63c8 #ffffff;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 5px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #5f63c8;
+  border-radius: 0px;
+  border: 2px none #665bfb;
+}
